--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 spring.application.name=gateway
 
-grpc.client.GLOBAL.negotiation-type=plaintext
+grpc.client.domain.address=static://domain:9091
+grpc.client.domain.negotiation-type=plaintext
+grpc.client.domain.enableKeepAlive=true
+grpc.client.domain.keepAliveWithoutCalls=true
 
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
-
 
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.io.grpc=INFO
 
+
 logging.config=classpath:logback-spring.xml
+spring.profiles.active=docker
 
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.access=unrestricted
