--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -50,4 +50,4 @@ EXPOSE 8080
 ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
 
 # Точка входа с настройками JVM
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "sleep 10 && java $JAVA_OPTS -jar app.jar"]
