--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@
       container_name: redis
       ports:
         - '6379:6379'
-      networks:
-        - backend
+
 
     rabbitmq:
       image: rabbitmq:3.11-management
@@ -19,8 +18,7 @@
       ports:
         - '5672:5672'
         - '15672:15672'
-      networks:
-        - backend
+
 
     postgres:
       image: postgres:latest
@@ -31,8 +29,7 @@
         POSTGRES_PASSWORD: postgres
       ports:
         - '5432:5432'
-      networks:
-        - backend
+
 
     logstash:
       image: opensearchproject/logstash-oss-with-opensearch-output-plugin:7.16.2
@@ -43,12 +40,6 @@
         - "5000:5000"
       depends_on:
         - opensearch
-      deploy:
-        resources:
-          limits:
-            cpus: "1.0"
-      networks:
-        - backend
 
 
     prometheus:
@@ -58,16 +49,13 @@
         - ./prometheus.yml:/etc/prometheus/prometheus.yml
       ports:
         - '9090:9090'
-      networks:
-        - backend
 
     grafana:
       image: grafana/grafana:latest
       container_name: grafana
       ports:
         - '3000:3000'
-      networks:
-        - backend
+
       volumes:
         - ./grafana/provisioning:/etc/grafana/provisioning
 
@@ -79,8 +67,8 @@
         PGADMIN_DEFAULT_PASSWORD: admin
       ports:
         - '5050:80'
-      networks:
-        - backend
+
+
 
     opensearch:
       image: opensearchproject/opensearch:2.10.0
@@ -97,26 +85,19 @@
           limits:
             cpus: "2.0"
 
-      networks:
-        - backend
+
+
     opensearch-dashboards:
       image: opensearchproject/opensearch-dashboards:2.10.0
       container_name: opensearch-dashboards
       ports:
         - "5601:5601"
       environment:
-        - OPENSEARCH_HOSTS=http://opensearch
-        - OPENSEARCH_PORT=9200
-        - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true
+        OPENSEARCH_HOSTS: http://opensearch:9200
+        DISABLE_SECURITY_DASHBOARDS_PLUGIN: true
       depends_on:
         - opensearch
-      deploy:
-        resources:
-          limits:
-            cpus: "0.5"
-            memory: 512M
-      networks:
-        - backend
+
     domain:
       build:
         context: ./domain
@@ -128,8 +109,7 @@
         - postgres
         - rabbitmq
         - redis
-      networks:
-        - backend
+
 
     gateway:
       build:
@@ -138,9 +118,6 @@
       container_name: gateway
       ports:
         - "8080:8080"
-      environment:
-        LOGBACK_URL: "logstash" # Имя сервиса Logstash или IP-адрес
-        LOGBACK_PORT: "5000"   # Порт Logstash
       depends_on:
         - domain
         - redis
@@ -150,10 +127,3 @@
         - grafana
         - logstash
         - opensearch
-      networks:
-        - backend
-
-
-  networks:
-    backend:
-      driver: bridge
