--- a/domain/src/main/resources/application.properties
+++ b/domain/src/main/resources/application.properties
@@ -10,16 +10,15 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/tasks
+spring.datasource.url=jdbc:postgresql://postgres:5432/tasks
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = TRUE
 spring.jpa.properties.hibernate.show_sql = TRUE
 spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate=DEBUG
 
 
 
